Fix checkbox asterisk alignment to hang closer to checkbox

--- a/src/frontend/src/components/CreditSearchForm.css
+++ b/src/frontend/src/components/CreditSearchForm.css
@@ -173,6 +173,7 @@
 /* Checkbox indentation */
 .checkbox-indent {
   margin-left: 1.5rem;
+  position: relative;
 }
 
 .checkbox-indent input[type="checkbox"] {
@@ -181,13 +182,14 @@
 
 .checkbox-indent .checkbox-label {
   display: inline-block;
-  padding-left: 1.5rem;
-  text-indent: 0;
+  padding-left: 2.5rem;
+  text-indent: -1rem;
 }
 
 .checkbox-indent .checkbox-label span {
-  margin-right: 0.25rem;
-  display: inline-block;
+  position: absolute;
+  left: 0.5rem;
+  margin-right: 0;
 }
 
 /* Form actions */
